--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,16 @@ version = "0.1.1"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = [ "toml==0.10.2",]
+dependencies = [
+ "fastapi>=0.116.1",
+ "llama-index>=0.13.1",
+ "llama-index-vector-stores-qdrant>=0.7.1",
+ "pyyaml>=6.0.2",
+ "qdrant-client>=1.15.1",
+ "toml==0.10.2",
+ "uvicorn>=0.35.0",
+ "volcengine-python-sdk>=4.0.10",
+]
 
 [tool.setuptools.package-data]
 loverooma = [ "config.yaml",]
