--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,10 @@
 [project]
 name = "loverooma"
-version = "0.1.1"
+version = "0.1.2"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = [
- "fastapi>=0.116.1",
- "llama-index>=0.13.1",
- "llama-index-vector-stores-qdrant>=0.7.1",
- "pyyaml>=6.0.2",
- "qdrant-client>=1.15.1",
- "toml==0.10.2",
- "uvicorn>=0.35.0",
- "volcengine-python-sdk>=4.0.10",
-]
+dependencies = [ "fastapi>=0.116.1", "llama-index>=0.13.1", "llama-index-vector-stores-qdrant>=0.7.1", "pyyaml>=6.0.2", "qdrant-client>=1.15.1", "toml==0.10.2", "uvicorn>=0.35.0", "volcengine-python-sdk>=4.0.10",]
 
 [tool.setuptools.package-data]
 loverooma = [ "config.yaml",]
